made for extra large devices

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <source media="(max-width: 640px)" srcset="images/player_320.png">
                 <source media="(min-width: 641px) and (max-width: 960px)" srcset="images/player_768.png">
                 <source media="(min-width: 961px) and (max-width: 1920px)" srcset="images/player_1920.png">
-                <img src="images/player_768.png" alt="Footballer">
+                <img src="images/player_768.png" alt="Players">
             </picture>
             <div class="connection-block">
                 <h3 class="uppercase-text">
@@ -122,7 +122,7 @@
                 <source media="(max-width: 640px)" srcset="images/be_active_320.png">
                 <source media="(min-width: 641px) and (max-width: 960px)" srcset="images/be_active_768.png">
                 <source media="(min-width: 961px) and (max-width: 1920px)" srcset="images/be_active_1920.png">
-                <img src="images/be_active_768.png" alt="Footballer">
+                <img src="images/be_active_768.png" alt="Be Active">
             </picture>
             <div class="rectangle">
                 <span class="first-option">01</span>
@@ -150,7 +150,7 @@
                 <source media="(max-width: 640px)" srcset="images/work_it_320.png">
                 <source media="(min-width: 641px) and (max-width: 960px)" srcset="images/work_it_768.png">
                 <source media="(min-width: 961px) and (max-width: 1920px)" srcset="images/work_it_1920.png">
-                <img src="images/work_it_768.png" alt="Footballer">
+                <img src="images/work_it_768.png" alt="Work It">
             </picture>
             <div class="rectangle">
                 <span class="third-option">03</span>
