restyled for medium devices

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             </svg>
             <h1 class="header-text uppercase-text">
                 <span>be recruited</span>
-                <span>play college sports</span>
+                <span>
+                    <span>play college</span>
+                    <span>sports</span>
+                </span>
             </h1>
             <div class="store-buttons">
                 <button class="apple-download-button uppercase-text">
